--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 23:05:05 2018</p>
+         Last Run: Mon Jul 16 00:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -43,13 +43,13 @@
                      <tr>
                         <td>07:00 PM</td>
                         <td>Clear</td>
-                        <td>28</td>
-                        <td>28</td>
+                        <td>29</td>
+                        <td>29</td>
                         <td>0</td>
-                        <td>25</td>
+                        <td>24</td>
                         <td>1</td>
                         <td>14</td>
-                        <td>ESE</td>
+                        <td>SE</td>
                         <td>0</td>
                      </tr>
                      <tr>
@@ -58,7 +58,7 @@
                         <td>27</td>
                         <td>27</td>
                         <td>0</td>
-                        <td>31</td>
+                        <td>30</td>
                         <td>0</td>
                         <td>14</td>
                         <td>ESE</td>
@@ -107,7 +107,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "29",
-                 "28",
+                 "29",
                  "27"
                ]
              },
@@ -118,7 +118,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "29",
-                 "28",
+                 "29",
                  "27"
                ]
              }
@@ -181,8 +181,8 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "22",
-                 "25",
-                 "31"
+                 "24",
+                 "30"
                ]
              },
              {
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 23:05:05 2018</p>
+         Last Run: Mon Jul 16 00:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -246,9 +246,9 @@
                         <td>27</td>
                         <td>27</td>
                         <td>0</td>
-                        <td>38</td>
+                        <td>37</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>E</td>
                         <td>55</td>
                      </tr>
@@ -258,11 +258,11 @@
                         <td>25</td>
                         <td>25</td>
                         <td>1</td>
-                        <td>44</td>
+                        <td>43</td>
                         <td>0</td>
                         <td>11</td>
                         <td>E</td>
-                        <td>54</td>
+                        <td>53</td>
                      </tr>
                   </tbody>
                </table>
@@ -381,8 +381,8 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "34",
-                 "38",
-                 "44"
+                 "37",
+                 "43"
                ]
              },
              {
@@ -392,7 +392,7 @@
                "data":[
                  "54",
                  "55",
-                 "54"
+                 "53"
                ]
              }
            ]
@@ -409,7 +409,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 23:05:05 2018</p>
+         Last Run: Mon Jul 16 00:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -431,10 +431,10 @@
                      <tr>
                         <td>05:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
-                        <td>23</td>
-                        <td>23</td>
-                        <td>42</td>
-                        <td>50</td>
+                        <td>22</td>
+                        <td>22</td>
+                        <td>41</td>
+                        <td>51</td>
                         <td>3</td>
                         <td>11</td>
                         <td>SE</td>
@@ -445,36 +445,36 @@
                         <td>Partly Cloudy</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>3</td>
-                        <td>51</td>
+                        <td>2</td>
+                        <td>53</td>
                         <td>2</td>
                         <td>11</td>
                         <td>SE</td>
-                        <td>42</td>
+                        <td>49</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Chance of a Thunderstorm</td>
-                        <td>22</td>
-                        <td>22</td>
-                        <td>36</td>
-                        <td>52</td>
+                        <td>Partly Cloudy</td>
+                        <td>21</td>
+                        <td>21</td>
+                        <td>6</td>
+                        <td>54</td>
                         <td>1</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>ESE</td>
-                        <td>57</td>
+                        <td>58</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Chance of a Thunderstorm</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>8</td>
-                        <td>55</td>
+                        <td>32</td>
+                        <td>56</td>
                         <td>0</td>
                         <td>14</td>
                         <td>E</td>
-                        <td>60</td>
+                        <td>61</td>
                      </tr>
                   </tbody>
                </table>
@@ -519,9 +519,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "23",
                  "22",
                  "22",
+                 "21",
                  "21"
                ]
              },
@@ -531,9 +531,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "23",
                  "22",
                  "22",
+                 "21",
                  "21"
                ]
              }
@@ -586,10 +586,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "42",
-                 "3",
-                 "36",
-                 "8"
+                 "41",
+                 "2",
+                 "6",
+                 "32"
                ]
              },
              {
@@ -597,10 +597,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "50",
                  "51",
-                 "52",
-                 "55"
+                 "53",
+                 "54",
+                 "56"
                ]
              },
              {
@@ -609,9 +609,9 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "50",
-                 "42",
-                 "57",
-                 "60"
+                 "49",
+                 "58",
+                 "61"
                ]
              }
            ]
@@ -628,7 +628,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 23:05:05 2018</p>
+         Last Run: Mon Jul 16 00:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -650,10 +650,10 @@
                      <tr>
                         <td>10:00 AM</td>
                         <td>Clear</td>
-                        <td>18</td>
-                        <td>18</td>
+                        <td>17</td>
+                        <td>17</td>
                         <td>0</td>
-                        <td>52</td>
+                        <td>53</td>
                         <td>3</td>
                         <td>10</td>
                         <td>NW</td>
@@ -665,7 +665,7 @@
                         <td>19</td>
                         <td>19</td>
                         <td>2</td>
-                        <td>47</td>
+                        <td>48</td>
                         <td>4</td>
                         <td>10</td>
                         <td>NW</td>
@@ -700,12 +700,12 @@
                         <td>Partly Cloudy</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>6</td>
+                        <td>5</td>
                         <td>39</td>
                         <td>7</td>
                         <td>8</td>
-                        <td>NW</td>
-                        <td>40</td>
+                        <td>NNW</td>
+                        <td>39</td>
                      </tr>
                   </tbody>
                </table>
@@ -751,7 +751,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "18",
+                 "17",
                  "19",
                  "20",
                  "21",
@@ -764,7 +764,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "18",
+                 "17",
                  "19",
                  "20",
                  "21",
@@ -825,7 +825,7 @@
                  "2",
                  "5",
                  "5",
-                 "6"
+                 "5"
                ]
              },
              {
@@ -833,8 +833,8 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "52",
-                 "47",
+                 "53",
+                 "48",
                  "43",
                  "40",
                  "39"
@@ -849,7 +849,7 @@
                  "33",
                  "37",
                  "38",
-                 "40"
+                 "39"
                ]
              }
            ]
