--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 16 00:05:04 2018</p>
+         Last Run: Mon Jul 16 01:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -60,7 +60,7 @@
                         <td>0</td>
                         <td>30</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>ESE</td>
                         <td>0</td>
                      </tr>
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 16 00:05:04 2018</p>
+         Last Run: Mon Jul 16 01:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -262,7 +262,7 @@
                         <td>0</td>
                         <td>11</td>
                         <td>E</td>
-                        <td>53</td>
+                        <td>54</td>
                      </tr>
                   </tbody>
                </table>
@@ -392,7 +392,7 @@
                "data":[
                  "54",
                  "55",
-                 "53"
+                 "54"
                ]
              }
            ]
@@ -409,7 +409,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 16 00:05:04 2018</p>
+         Last Run: Mon Jul 16 01:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -431,12 +431,12 @@
                      <tr>
                         <td>05:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
-                        <td>22</td>
-                        <td>22</td>
-                        <td>41</td>
-                        <td>51</td>
+                        <td>23</td>
+                        <td>23</td>
+                        <td>42</td>
+                        <td>49</td>
                         <td>3</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>SE</td>
                         <td>50</td>
                      </tr>
@@ -445,8 +445,8 @@
                         <td>Partly Cloudy</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>2</td>
-                        <td>53</td>
+                        <td>7</td>
+                        <td>51</td>
                         <td>2</td>
                         <td>11</td>
                         <td>SE</td>
@@ -455,26 +455,26 @@
                      <tr>
                         <td>07:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>21</td>
-                        <td>21</td>
-                        <td>6</td>
-                        <td>54</td>
+                        <td>22</td>
+                        <td>22</td>
+                        <td>15</td>
+                        <td>52</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>ESE</td>
                         <td>58</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Chance of a Thunderstorm</td>
+                        <td>Mostly Cloudy</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>32</td>
+                        <td>24</td>
                         <td>56</td>
                         <td>0</td>
                         <td>14</td>
                         <td>E</td>
-                        <td>61</td>
+                        <td>60</td>
                      </tr>
                   </tbody>
                </table>
@@ -519,9 +519,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
+                 "23",
                  "22",
                  "22",
-                 "21",
                  "21"
                ]
              },
@@ -531,9 +531,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
+                 "23",
                  "22",
                  "22",
-                 "21",
                  "21"
                ]
              }
@@ -586,10 +586,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "41",
-                 "2",
-                 "6",
-                 "32"
+                 "42",
+                 "7",
+                 "15",
+                 "24"
                ]
              },
              {
@@ -597,9 +597,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "49",
                  "51",
-                 "53",
-                 "54",
+                 "52",
                  "56"
                ]
              },
@@ -611,7 +611,7 @@
                  "50",
                  "49",
                  "58",
-                 "61"
+                 "60"
                ]
              }
            ]
@@ -628,7 +628,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 16 00:05:04 2018</p>
+         Last Run: Mon Jul 16 01:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -653,59 +653,59 @@
                         <td>17</td>
                         <td>17</td>
                         <td>0</td>
-                        <td>53</td>
+                        <td>52</td>
                         <td>3</td>
                         <td>10</td>
                         <td>NW</td>
-                        <td>26</td>
+                        <td>28</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Partly Cloudy</td>
-                        <td>19</td>
-                        <td>19</td>
+                        <td>18</td>
+                        <td>18</td>
                         <td>2</td>
-                        <td>48</td>
+                        <td>47</td>
                         <td>4</td>
                         <td>10</td>
                         <td>NW</td>
-                        <td>33</td>
+                        <td>34</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>20</td>
-                        <td>20</td>
-                        <td>5</td>
-                        <td>43</td>
+                        <td>19</td>
+                        <td>19</td>
+                        <td>4</td>
+                        <td>42</td>
                         <td>6</td>
-                        <td>10</td>
-                        <td>NNW</td>
-                        <td>37</td>
-                     </tr>
-                     <tr>
-                        <td>01:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>21</td>
-                        <td>21</td>
-                        <td>5</td>
-                        <td>40</td>
-                        <td>7</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>NNW</td>
                         <td>38</td>
                      </tr>
                      <tr>
+                        <td>01:00 PM</td>
+                        <td>Partly Cloudy</td>
+                        <td>20</td>
+                        <td>20</td>
+                        <td>15</td>
+                        <td>40</td>
+                        <td>6</td>
+                        <td>10</td>
+                        <td>NNW</td>
+                        <td>57</td>
+                     </tr>
+                     <tr>
                         <td>02:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>22</td>
-                        <td>22</td>
-                        <td>5</td>
-                        <td>39</td>
-                        <td>7</td>
-                        <td>8</td>
+                        <td>21</td>
+                        <td>21</td>
+                        <td>15</td>
+                        <td>40</td>
+                        <td>6</td>
+                        <td>10</td>
                         <td>NNW</td>
-                        <td>39</td>
+                        <td>58</td>
                      </tr>
                   </tbody>
                </table>
@@ -752,10 +752,10 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "17",
+                 "18",
                  "19",
                  "20",
-                 "21",
-                 "22"
+                 "21"
                ]
              },
              {
@@ -765,10 +765,10 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "17",
+                 "18",
                  "19",
                  "20",
-                 "21",
-                 "22"
+                 "21"
                ]
              }
            ]
@@ -823,9 +823,9 @@
                "data":[
                  "0",
                  "2",
-                 "5",
-                 "5",
-                 "5"
+                 "4",
+                 "15",
+                 "15"
                ]
              },
              {
@@ -833,11 +833,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "53",
-                 "48",
-                 "43",
+                 "52",
+                 "47",
+                 "42",
                  "40",
-                 "39"
+                 "40"
                ]
              },
              {
@@ -845,11 +845,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "26",
-                 "33",
-                 "37",
+                 "28",
+                 "34",
                  "38",
-                 "39"
+                 "57",
+                 "58"
                ]
              }
            ]
